fix: javadoc warnings